docs : 반려 사유 삭제

--- a/03.api.md
+++ b/03.api.md
@@ -55,7 +55,7 @@
 | `/admin/signup-requests` | GET | 회원가입 승인 요청 목록 (필터, 검색) | [회원가입 승인 관리](02_wireframe.md#211-회원가입-승인-관리) |
 | `/admin/signup-requests/{id}` | GET | 회원가입 승인 요청 상세 | [회원가입 승인 상세](02_wireframe.md#212-회원가입-승인-상세) |
 | `/admin/signup-requests/{id}/approve` | POST | 회원가입 승인 (업체인 경우 광고주 매핑 포함) | [회원가입 승인 상세](02_wireframe.md#212-회원가입-승인-상세) |
-| `/admin/signup-requests/{id}/reject` | POST | 회원가입 거절 (거절 사유 포함) | [회원가입 승인 상세](02_wireframe.md#212-회원가입-승인-상세) |
+| `/admin/signup-requests/{id}/reject` | POST | 회원가입 거절  | [회원가입 승인 상세](02_wireframe.md#212-회원가입-승인-상세) |
 | `/admin/advertisers` | GET | 광고주 목록 (검색) | [광고주 목록 관리](02_wireframe.md#213-광고주-목록-관리), [회원가입 승인 상세](02_wireframe.md#212-회원가입-승인-상세) |
 | `/admin/advertisers/{id}` | GET | 광고주 상세 및 매핑된 업체 목록 | [광고주 상세](02_wireframe.md#214-광고주-상세) |
 | `/admin/agencies` | GET | 업체 목록 (검색) | [업체 목록 관리](02_wireframe.md#215-업체-목록-관리) |
