docs : 대시보드용 api 수정

--- a/03.api.md
+++ b/03.api.md
@@ -45,8 +45,7 @@
 
 | API Path | Method | 설명 | 사용되는 화면 |
 |----------|--------|------|---------------|
-| `/admin/dashboard/stats` | GET | 대시보드 통계 (승인대기, 광고주/업체 수) | [대시보드](02_wireframe.md#20-대시보드) |
-| `/admin/dashboard/recent-requests` | GET | 최근 승인 요청 목록 (최대 5건) | [대시보드](02_wireframe.md#20-대시보드) |
+| `/admin/dashboard` | GET | 대시보드 통합 (통계 + 최근 승인 요청 5건) | [대시보드](02_wireframe.md#20-대시보드) |
 
 ### 2.2 회원 관리
 
@@ -120,8 +119,7 @@
 
 | API Path | Method | 설명 | 사용되는 화면 |
 |----------|--------|------|---------------|
-| `/agency/dashboard/stats` | GET | 업체 대시보드 통계 (매핑 광고주, 추적 수, 포스팅 수) | [대시보드](02_wireframe.md#30-대시보드) |
-| `/agency/dashboard/recent-tracking` | GET | 최근 추적 현황 (최대 5건) | [대시보드](02_wireframe.md#30-대시보드) |
+| `/agency/dashboard` | GET | 대시보드 통합 (통계 + 최근 추적 현황 5건) | [대시보드](02_wireframe.md#30-대시보드) |
 
 ### 3.2 플레이스 순위 관리
 
@@ -181,8 +179,7 @@
 
 | API Path | Method | 설명 | 사용되는 화면 |
 |----------|--------|------|---------------|
-| `/advertiser/dashboard/stats` | GET | 광고주 대시보드 통계 (매핑 업체, 추적 수, 포스팅 수) | [대시보드](02_wireframe.md#40-대시보드) |
-| `/advertiser/dashboard/recent-tracking` | GET | 최근 추적 현황 (최대 5건) | [대시보드](02_wireframe.md#40-대시보드) |
+| `/advertiser/dashboard` | GET | 대시보드 통합 (통계 + 최근 추적 현황 5건) | [대시보드](02_wireframe.md#40-대시보드) |
 
 ### 4.2 플레이스 순위 조회
 
@@ -230,10 +227,10 @@
 | 사용자 유형 | API 개수 |
 |------------|----------|
 | 공통 | 8개 |
-| 관리자 | 27개 |
-| 업체 | 25개 |
-| 광고주 | 14개 |
-| **총합** | **74개** |
+| 관리자 | 26개 |
+| 업체 | 24개 |
+| 광고주 | 13개 |
+| **총합** | **71개** |
 
 ---
 
